- https://github.com/eclipse-sirius/sirius-web/issues/3024[#3024] [diagram] Added two new variables `semanticEdgeSource` and `graphicalEdgeSource` to compute the target nodes of an edge.
- https://github.com/eclipse-sirius/sirius-web/issues/3050[#3050] [sirius-web] Contributes a first version of the new Sirius Web architecture


== v2024.1.0

=== Shapes

- Add support for Portal representation
- Add support for Gantt representation
- Add support for Deck representation
- Add support to pin unpin nodes


=== Architectural decision records

- [ADR-122] Use the page object model in integration tests
- [ADR-123] Improve frontend selection support
- [ADR-124] Add support for libraries
- [ADR-125] Provide a common ShareRepresentationModal

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-web/issues/2675[#2675] [view] `IViewDiagramElementFinder` has been updated with new methods.
All implementations of this interface must implement these new methods:
* `List<NodeDescription> getNodeDescriptions();` to retrieve all `NodeDescriptions` created by providers.
* `List<EdgeDescription> getEdgeDescriptions();` to retrieve all `EdgeDescriptions` created by providers.
- https://github.com/eclipse-sirius/sirius-web/issues/2658[#2658] [sirius-web] Add dedicated colors for navigation bar in the Sirius Web theme.
The theme provided by the user must now provide navigation bar colors:
```ts
...
navigationBar: {
  border: 'yellow',
  background: 'blue',
},
...
```
- https://github.com/eclipse-sirius/sirius-web/issues/2669[#2669] [sirius-web] Add dedicated colors for selected elements in the Sirius Web theme.
The theme provided by the user must now provide selected elements colors:
```ts
...
selected: 'gray',
...
```
- https://github.com/eclipse-sirius/sirius-web/issues/2672[#2672] [sirius-web] Add dedicated colors for toast messages in Sirius Web theme.
The theme provided by the user must now provide toast messages colors:
```ts
...
success: {
  main: '#43A047',